--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -19,7 +19,7 @@
       window.netlifyIdentity.on("init", user => {
         if (!user) {
           window.netlifyIdentity.on("login", () => {
-            document.location.href = "/admin/";
+            document.location.href = "/static/admin/";
           });
         }
       });
